@@ -51,6 +51,7 @@ public class MultiRegionTable extends HBaseTestCase {
    * @param columnName
    * @throws IOException
    */
+  @SuppressWarnings("null")
   public static void makeMultiRegionTable(Configuration conf,
       MiniHBaseCluster cluster, FileSystem localFs, String tableName,
       String columnName)
@@ -130,7 +131,8 @@ public class MultiRegionTable extends HBaseTestCase {
       Writables.getHRegionInfoOrNull(data.get(HConstants.COL_SPLITA));
     HRegionInfo splitB =
       Writables.getHRegionInfoOrNull(data.get(HConstants.COL_SPLITB));
-    Path parentDir = HRegion.getRegionDir(d, parent.getEncodedName());
+    Path parentDir = HRegion.getRegionDir(d,
+        HRegionInfo.encodeRegionName(parent.getRegionName()));
     assertTrue(fs.exists(parentDir));
     LOG.info("Split happened. Parent is " + parent.getRegionName() +
         " and daughters are " + splitA.getRegionName() + ", " +
